--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document on fait le header</title>
+    <title>The Wild Post</title>
 </head>
+<header>
+    <img src="C:\Users\remil\wild-git\Project-1\assets">
+</header>
 
 <body>
 
