--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>The Wild Post</title>
 </head>
 <header>
-    <img src="C:\Users\remil\wild-git\Project-1\assets">
+    <div> </div>
+    <img id="logo" src="C:\Users\remil\wild-git\Project-1\assets\WCS_logo.png">
+
+    <input type="search" id="site-search" name="q">
+
+    <button><img id="loupe" src="C:\Users\remil\wild-git\Project-1\assets\loupe.png" ​></button>
 </header>
 
 <body>
