--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <header>
     <div> </div>
-    <img id="logo" src="C:\Users\remil\wild-git\Project-1\assets\WCS_logo.png">
+    <img id="logo" src="assets\WCS_logo.png">
 
     <input type="search" id="site-search" name="q">
 
-    <button><img id="loupe" src="C:\Users\remil\wild-git\Project-1\assets\loupe.png" ​></button>
+    <button><img id="loupe" src="assets\loupe.png" ​></button>
 </header>
 
 <body>
