--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <header>
     <img id="logo" src="assets\WCS_logo.png">
+    <h1>The Wild Post</h1>
 
     <input type="search" id="site-search" name="q">
 
@@ -19,6 +20,36 @@
 
 
 <body>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed arcu diam, elementum et quam eu, tristique mattis
+        nisl. Pellentesque scelerisque est dui, a efficitur libero facilisis ac. Nam bibendum nec nulla vitae rhoncus.
+        Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Praesent vel eros eget
+        justo tincidunt pharetra. Curabitur semper quam est, at scelerisque tortor porttitor vulputate. Pellentesque
+        consequat porttitor diam, sed laoreet quam iaculis sit amet.
+
+        Sed sed ipsum vulputate, porttitor mauris in, consequat augue. In lorem magna, malesuada sed efficitur a, cursus
+        et nulla. Ut aliquam lectus eget ante ornare consectetur. Vestibulum tempus, tortor sit amet varius fringilla,
+        libero risus elementum eros, at cursus ex metus sit amet mauris. Nam eu tincidunt mi, sit amet tincidunt ante.
+        Duis turpis felis, porttitor ac mattis quis, convallis sed nisi. Sed vel ipsum sit amet felis ultricies
+        consectetur ac tincidunt urna. Maecenas mattis enim nec vehicula pretium.
+
+        Nunc mauris lectus, elementum in turpis a, semper suscipit ante. Aenean tincidunt vitae leo id rutrum.
+        Pellentesque ullamcorper justo libero, non lacinia turpis volutpat vitae. Nullam fringilla volutpat augue, quis
+        laoreet odio ultricies ut. Maecenas in neque eros. Sed at elit ac metus vestibulum bibendum eget a leo. In
+        interdum metus id ligula egestas, eget congue diam ullamcorper.
+
+        Sed vitae tortor in elit sollicitudin lacinia feugiat nec libero. Nullam luctus egestas magna et molestie. Donec
+        eu pharetra mauris, in aliquet risus. Aliquam vitae eros eget metus lacinia cursus nec eu mauris. Etiam vitae
+        semper urna, eu laoreet quam. Sed efficitur interdum vehicula. Aenean laoreet eu lorem sit amet sollicitudin.
+        Aliquam erat volutpat. Nunc eget ullamcorper nulla, nec maximus dui. Aliquam nec congue justo. Curabitur ut sem
+        ac eros ultrices gravida. Nam tempor erat et elit commodo tempus. Suspendisse sed sodales mi.
+
+        Aliquam a mollis felis. Nam eget lacus lectus. Aliquam consectetur nisi lacus, at tempor nisi faucibus
+        fermentum. Vestibulum rutrum aliquam tellus id semper. Morbi efficitur luctus ligula, in dictum nisl
+        sollicitudin vel. Phasellus volutpat, nisl sed efficitur tristique, sapien nulla dignissim erat, id faucibus
+        lorem justo et lorem. Nam vehicula rutrum vehicula. Donec condimentum dolor laoreet, lacinia ipsum iaculis,
+        volutpat justo. Nullam facilisis sed elit at pellentesque. Interdum et malesuada fames ac ante ipsum primis in
+        faucibus. Maecenas nunc felis, hendrerit vitae pulvinar vitae, posuere non tortor. Morbi vitae mi a eros laoreet
+        facilisis. Praesent laoreet eros eget aliquet ornare. Vestibulum ornare maximus ex ut semper.</p>
 
     <footer>
 
