--- a/index.html
+++ b/index.html
@@ -63,6 +63,40 @@
         </p>
 
     </details>
+    <details>
+        <summary>
+            <img id="workimg" src="assets/workimg.jpg">
+            <h3>
+                Work: Le starter pack du Wilder
+            </h3>
+            <i class="fa-solid fa-angle-right2"></i>
+            <i class="fa-solid fa-chevron-down2"></i>
+        </summary>
+        <p><strong>Odyssey</strong><br>
+
+            Reprenant les codes (lol) de la mythologie grecque, la WCS distille son enseignement à travers de multiples
+            quêtes visant à développer les compétences des wilders. Le contenu est articulé autour de 3 axes: des cours
+            basés sur des cas concrets, des liens connexes et la plupart de ces quêtes ont pour final un challenge tech.
+            Ce challenge est corrigé par d’autres wilders. Les thèmes de ces quêtes sont en rapport avec l’orientation
+            pédagogique de la promo, cette année, entre autres, HTML, CSS, et JS sont au menu pour régaler les petits
+            NERD que nous sommes.<br>
+            <br>
+            <strong>Ateliers / cours</strong><br>
+
+            Les ateliers/ cours seuls vestiges de pédagogie classique, sont là pour faire le focus sur des notions
+            particulièrement importantes. Cependant même là les wilders peuvent opter pour la méthode de leur choix :
+            (Atelier avec Romain le formateur, petits groupes, ou en solo).
+            Les cours permettent au besoin de: développer la culture tech des wilders, introduire avec un peu de théorie
+            les sujets qui seront abordés dans la suite de la formation, mais surtout de harceler le formateur de
+            questions en tous genres.<br>
+            <br>
+            <strong>Projets</strong><br>
+
+            Quatre sujets de projets ont été démocratiquement choisis :): Le trombinoscope de la promo, un quizz, la
+            timeline de la formation mais surtout un brillant et pertinent journal qui “rendra la vie de ceux qui auront
+            le privilège de le lire meilleure et autrement plus riche.” src: Un wilder qui a souhaité garder l’anonymat.
+        </p>
+    </details>
 
 
     <footer>
