--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </details>
     <details>
         <summary>
-            <img id="workimg" src="assets/workimg.jpg">
+            <img id="articleimg" src="assets/workimg.jpg">
             <h3>
                 Work: Le starter pack du Wilder
             </h3>
@@ -96,6 +96,49 @@
             timeline de la formation mais surtout un brillant et pertinent journal qui “rendra la vie de ceux qui auront
             le privilège de le lire meilleure et autrement plus riche.” src: Un wilder qui a souhaité garder l’anonymat.
         </p>
+    </details>
+    <details>
+        <summary>
+            <img id="articleimg" src="assets/crane.jpg">
+            <h3>
+                Coiffure Lifestyle et Esthétique by Jessy
+            </h3>
+            <i class="fa-solid fa-angle-right2"></i>
+            <i class="fa-solid fa-chevron-down2"></i>
+        </summary>
+
+        <p><strong>Bonjour Jessy…</strong><br>
+            Bonjour, je suis enchanté que vous ayez décidé de m'interviewer.
+            <br>
+
+            <strong>Ca va?</strong><br>
+            Un peu décoiffé ce matin mais sinon ça va.<br>
+            <br>
+
+            <strong>Peux tu nous dire pourquoi ta chevelure revêt autant d’importance pour toi?</strong><br>
+            Les cheveux c’est la vie ! J’aime sentir mes cheveux battre mon visage lorsque je chevauche ma trottinette
+            pour
+            aller à la wild. Dans ces moments je me dis que la vie est belle.
+            <br>
+            <strong>Combien de temps mets-tu pour entretenir ces magnifiques cheveux?</strong><br>
+            On ne va pas se mentir, on n’a rien sans rien. J’ai adopté une méthode quasi-militaire. Tous les jours
+            shampooing, après-shampooing, masques, rinçage à l’eau osmosée. Puis selon mes humeurs, soit je les laisse
+            avec
+            un effet coiffé/décoiffé, ou plus structurés avec de la cire coiffante. Parfois même je me les lisse. C’est
+            beaucoup de temps mais le résultat en vaut la peine non? … non?...
+            <br>
+
+            <strong>C’est sûr… D’ailleurs avec d’aussi beaux cheveux, tu dois attiser les jalousies, non?</strong><br>
+            Oh, avec le temps j’ai appris à les ignorer. Tenez, pas plus tard qu’hier H***, wilder m’a carrément dit que
+            je
+            devrais me raser les cheveux. Quelques années plus tôt je me serais énervé, mais avec le temps j’ai appris à
+            laisser couler.
+            <br>
+
+            <strong>Sinon des conseils capillaires pour nos lecteurs?</strong><br>
+            Il faut aimer le cheveu avant tout. Et beaucoup de travail. Du sang et des larmes comme disait l’autre.
+        </p>
+
     </details>
 
 
