--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             le privilège de le lire meilleure et autrement plus riche.” src: Un wilder qui a souhaité garder l’anonymat.
         </p>
     </details>
-    <details id=article3>
+    <details>
         <summary>
             <img id="articleimg" src="assets/crane.jpg">
             <h3>
@@ -196,7 +196,7 @@
 
         <a href="#"><img src="assets/first day.png"></a>
         <a href="#"><img src="assets/work.png"></a>
-        <a href="#article3"><img src="assets/stories.png"></a>
+        <a href="#"><img src="assets/stories.png"></a>
 
     </footer>
 
