--- a/index.html
+++ b/index.html
@@ -19,186 +19,184 @@
     <title>The Wild Post</title>
 </head>
 <header>
-    <img id="logo" src="assets\WCS_logo.png">
+    <img id="logo" src="assets/WCS_logo.png" alt="Logo The Wild Post">
     <h1>The Wild Post</h1>
 
-    <button><img id="loupe" src="assets\loupe.png" ​> </button>
+    <button><img id="loupe" src="assets/loupe.png" alt="Bouton de recherche"> </button>
 </header>
 
 
-<body>
-
-    <details>
+<details>
 
 
 
-        <summary>
-            <img id="firstdayimg" src="assets/tueur.jpg">
-            <h2>Training Day: La meilleure façon de se préparer</h2>
-            <i class="fa-solid fa-angle-right"></i>
-            <i class="fa-solid fa-chevron-down"></i>
+    <summary>
+        <img class="firstdayimg" src="assets/tueur.jpg" alt="Image d'illustration d'article">
+        <h2>Training Day: La meilleure façon de se préparer</h2>
+        <i class="fa-solid fa-angle-right"></i>
+        <i class="fa-solid fa-chevron-down"></i>
 
-        </summary>
-        <p>
-            <strong>1.Test challenge</strong><br>
-            <br>
-            Bien avant notre rentrée, nous avions à disposition une série de 18 quêtes : le Tech Challenge.
-            Ces différentes quêtes avaient pour but d’apprendre aux wilders les bases du code pour ainsi atteindre
-            un
-            but final : créer une page web. ( Selon la légende certains ont dû la faire pour être acceptés, d’autres
-            non
-            lol )
-            Lors de ses quêtes, diverses notions du développement sont données au wilders, comme le concept du
-            “wireframe”, CodeSandBox, les bases du HTML et CSS et même une introduction à JavaScript.<br>
-            <br>
+    </summary>
+    <p>
+        <strong>1.Test challenge</strong><br>
+        <br>
+        Bien avant notre rentrée, nous avions à disposition une série de 18 quêtes : le Tech Challenge.
+        Ces différentes quêtes avaient pour but d’apprendre aux wilders les bases du code pour ainsi atteindre
+        un
+        but final : créer une page web. ( Selon la légende certains ont dû la faire pour être acceptés, d’autres
+        non
+        lol )
+        Lors de ses quêtes, diverses notions du développement sont données au wilders, comme le concept du
+        “wireframe”, CodeSandBox, les bases du HTML et CSS et même une introduction à JavaScript.<br>
+        <br>
 
-            <strong>2.Règles de vie à la WildCodeSchool (résumé quêtes onboarding)</strong><br>
-            <br>
+        <strong>2.Règles de vie à la WildCodeSchool (résumé quêtes onboarding)</strong><br>
+        <br>
 
 
 
-            <strong>3.Choix des chaussons / chaussettes.</strong><br>
-        </p>
+        <strong>3.Choix des chaussons / chaussettes.</strong><br>
+    </p>
 
-    </details>
-    <details>
-        <summary>
-            <img id="articleimg" src="assets/workimg.jpg">
-            <h3>
-                Work: Le starter pack du Wilder
-            </h3>
-            <i class="fa-solid fa-angle-right"></i>
-            <i class="fa-solid fa-chevron-down"></i>
-        </summary>
-        <p><strong>Odyssey</strong><br>
+</details>
+<details>
+    <summary>
+        <img class="articleimg" src="assets/workimg.jpg" alt="Image d'illustration d'article">
+        <h3>
+            Work: Le starter pack du Wilder
+        </h3>
+        <i class="fa-solid fa-angle-right"></i>
+        <i class="fa-solid fa-chevron-down"></i>
+    </summary>
+    <p><strong>Odyssey</strong><br>
 
-            Reprenant les codes (lol) de la mythologie grecque, la WCS distille son enseignement à travers de multiples
-            quêtes visant à développer les compétences des wilders. Le contenu est articulé autour de 3 axes: des cours
-            basés sur des cas concrets, des liens connexes et la plupart de ces quêtes ont pour final un challenge tech.
-            Ce challenge est corrigé par d’autres wilders. Les thèmes de ces quêtes sont en rapport avec l’orientation
-            pédagogique de la promo, cette année, entre autres, HTML, CSS, et JS sont au menu pour régaler les petits
-            NERD que nous sommes.<br>
-            <br>
-            <strong>Ateliers / cours</strong><br>
+        Reprenant les codes (lol) de la mythologie grecque, la WCS distille son enseignement à travers de multiples
+        quêtes visant à développer les compétences des wilders. Le contenu est articulé autour de 3 axes: des cours
+        basés sur des cas concrets, des liens connexes et la plupart de ces quêtes ont pour final un challenge tech.
+        Ce challenge est corrigé par d’autres wilders. Les thèmes de ces quêtes sont en rapport avec l’orientation
+        pédagogique de la promo, cette année, entre autres, HTML, CSS, et JS sont au menu pour régaler les petits
+        NERD que nous sommes.<br>
+        <br>
+        <strong>Ateliers / cours</strong><br>
 
-            Les ateliers/ cours seuls vestiges de pédagogie classique, sont là pour faire le focus sur des notions
-            particulièrement importantes. Cependant même là les wilders peuvent opter pour la méthode de leur choix :
-            (Atelier avec Romain le formateur, petits groupes, ou en solo).
-            Les cours permettent au besoin de: développer la culture tech des wilders, introduire avec un peu de théorie
-            les sujets qui seront abordés dans la suite de la formation, mais surtout de harceler le formateur de
-            questions en tous genres.<br>
-            <br>
-            <strong>Projets</strong><br>
+        Les ateliers/ cours seuls vestiges de pédagogie classique, sont là pour faire le focus sur des notions
+        particulièrement importantes. Cependant même là les wilders peuvent opter pour la méthode de leur choix :
+        (Atelier avec Romain le formateur, petits groupes, ou en solo).
+        Les cours permettent au besoin de: développer la culture tech des wilders, introduire avec un peu de théorie
+        les sujets qui seront abordés dans la suite de la formation, mais surtout de harceler le formateur de
+        questions en tous genres.<br>
+        <br>
+        <strong>Projets</strong><br>
 
-            Quatre sujets de projets ont été démocratiquement choisis :): Le trombinoscope de la promo, un quizz, la
-            timeline de la formation mais surtout un brillant et pertinent journal qui “rendra la vie de ceux qui auront
-            le privilège de le lire meilleure et autrement plus riche.” src: Un wilder qui a souhaité garder l’anonymat.
-        </p>
-    </details>
-    <details>
-        <summary>
-            <img id="articleimg" src="assets/crane.jpg">
-            <h3>
-                Coiffure Lifestyle et Esthétique by Jessy
-            </h3>
-            <i class="fa-solid fa-angle-right"></i>
-            <i class="fa-solid fa-chevron-down"></i>
-        </summary>
+        Quatre sujets de projets ont été démocratiquement choisis :): Le trombinoscope de la promo, un quizz, la
+        timeline de la formation mais surtout un brillant et pertinent journal qui “rendra la vie de ceux qui auront
+        le privilège de le lire meilleure et autrement plus riche.” src: Un wilder qui a souhaité garder l’anonymat.
+    </p>
+</details>
+<details>
+    <summary>
+        <img class="articleimg" src="assets/crane.jpg" alt="Image d'illustration d'article">
+        <h3>
+            Coiffure Lifestyle et Esthétique by Jessy
+        </h3>
+        <i class="fa-solid fa-angle-right"></i>
+        <i class="fa-solid fa-chevron-down"></i>
+    </summary>
 
-        <p><strong>Bonjour Jessy…</strong><br>
-            Bonjour, je suis enchanté que vous ayez décidé de m'interviewer.
-            <br>
+    <p><strong>Bonjour Jessy…</strong><br>
+        Bonjour, je suis enchanté que vous ayez décidé de m'interviewer.
+        <br>
 
-            <strong>Ca va?</strong><br>
-            Un peu décoiffé ce matin mais sinon ça va.<br>
-            <br>
+        <strong>Ca va?</strong><br>
+        Un peu décoiffé ce matin mais sinon ça va.<br>
+        <br>
 
-            <strong>Peux tu nous dire pourquoi ta chevelure revêt autant d’importance pour toi?</strong><br>
-            Les cheveux c’est la vie ! J’aime sentir mes cheveux battre mon visage lorsque je chevauche ma trottinette
-            pour
-            aller à la wild. Dans ces moments je me dis que la vie est belle.
-            <br>
-            <strong>Combien de temps mets-tu pour entretenir ces magnifiques cheveux?</strong><br>
-            On ne va pas se mentir, on n’a rien sans rien. J’ai adopté une méthode quasi-militaire. Tous les jours
-            shampooing, après-shampooing, masques, rinçage à l’eau osmosée. Puis selon mes humeurs, soit je les laisse
-            avec
-            un effet coiffé/décoiffé, ou plus structurés avec de la cire coiffante. Parfois même je me les lisse. C’est
-            beaucoup de temps mais le résultat en vaut la peine non? … non?...
-            <br>
+        <strong>Peux tu nous dire pourquoi ta chevelure revêt autant d’importance pour toi?</strong><br>
+        Les cheveux c’est la vie ! J’aime sentir mes cheveux battre mon visage lorsque je chevauche ma trottinette
+        pour
+        aller à la wild. Dans ces moments je me dis que la vie est belle.
+        <br>
+        <strong>Combien de temps mets-tu pour entretenir ces magnifiques cheveux?</strong><br>
+        On ne va pas se mentir, on n’a rien sans rien. J’ai adopté une méthode quasi-militaire. Tous les jours
+        shampooing, après-shampooing, masques, rinçage à l’eau osmosée. Puis selon mes humeurs, soit je les laisse
+        avec
+        un effet coiffé/décoiffé, ou plus structurés avec de la cire coiffante. Parfois même je me les lisse. C’est
+        beaucoup de temps mais le résultat en vaut la peine non? … non?...
+        <br>
 
-            <strong>C’est sûr… D’ailleurs avec d’aussi beaux cheveux, tu dois attiser les jalousies, non?</strong><br>
-            Oh, avec le temps j’ai appris à les ignorer. Tenez, pas plus tard qu’hier H***, wilder m’a carrément dit que
-            je
-            devrais me raser les cheveux. Quelques années plus tôt je me serais énervé, mais avec le temps j’ai appris à
-            laisser couler.
-            <br>
+        <strong>C’est sûr… D’ailleurs avec d’aussi beaux cheveux, tu dois attiser les jalousies, non?</strong><br>
+        Oh, avec le temps j’ai appris à les ignorer. Tenez, pas plus tard qu’hier H***, wilder m’a carrément dit que
+        je
+        devrais me raser les cheveux. Quelques années plus tôt je me serais énervé, mais avec le temps j’ai appris à
+        laisser couler.
+        <br>
 
-            <strong>Sinon des conseils capillaires pour nos lecteurs?</strong><br>
-            Il faut aimer le cheveu avant tout. Et beaucoup de travail. Du sang et des larmes comme disait l’autre.
-        </p>
+        <strong>Sinon des conseils capillaires pour nos lecteurs?</strong><br>
+        Il faut aimer le cheveu avant tout. Et beaucoup de travail. Du sang et des larmes comme disait l’autre.
+    </p>
 
-    </details>
+</details>
 
-    <details>
-        <summary>
-            <img id="articleimg" src="assets/reveil.jpg">
-            <h3>
-                Morning routine Mounir
-            </h3>
-            <i class="fa-solid fa-angle-right"></i>
-            <i class="fa-solid fa-chevron-down"></i>
-        </summary>
-        <p><strong>A la rédaction nous nous sommes posés des questions autour des routines matinales des wilders.
-                Un profil a retenu notre attention.</strong><br>
+<details>
+    <summary>
+        <img class="articleimg" src="assets/reveil.jpg" alt="Image d'illustration d'article">
+        <h3>
+            Morning routine Mounir
+        </h3>
+        <i class="fa-solid fa-angle-right"></i>
+        <i class="fa-solid fa-chevron-down"></i>
+    </summary>
+    <p><strong>A la rédaction nous nous sommes posés des questions autour des routines matinales des wilders.
+            Un profil a retenu notre attention.</strong><br>
 
-            <strong>Enquête:</strong><br>
+        <strong>Enquête:</strong><br>
 
-            Il est 04:00, Mounir se lève. Puis il enchaîne avec un café. Vers 05:00, yoga et pilates sont au programme.
-            Mounir prend son petit déjeuner à base de graines et de racines, avec un soupçon d’eau en provenance du mont
-            fuji.
-            Suit une bonne heure de méditation. Il est l’heure de partir rejoindre ses collègues à la wild.
-            Force est de constater que Mounir est en pleine forme à son arrivée à quartier libre : “ Je suis tout à fait
-            éveillé
-            et en forme pour démarrer cette journée “ nous confie Mounir, puis il ajoute : “ Certains de mes collègues
-            ont le teint
-            blafard, des cernes, si ils suivaient la même morning-routine que moi, ils n’auraient pas tous ces
-            problèmes”.
-            La rédaction a été convaincue par ces bonnes pratiques, nous allons donc nous mettre aux racines et aux
-            graines le matin…
-        </p>
-    </details>
-    <details>
-        <summary>
-            <img id="articleimg" src="assets/bar.jpg">
-            <h3>
-                Sélection de bars by Benoit feat Robin
-            </h3>
-            <i class="fa-solid fa-angle-right"></i>
-            <i class="fa-solid fa-chevron-down"></i>
-        </summary>
+        Il est 04:00, Mounir se lève. Puis il enchaîne avec un café. Vers 05:00, yoga et pilates sont au programme.
+        Mounir prend son petit déjeuner à base de graines et de racines, avec un soupçon d’eau en provenance du mont
+        fuji.
+        Suit une bonne heure de méditation. Il est l’heure de partir rejoindre ses collègues à la wild.
+        Force est de constater que Mounir est en pleine forme à son arrivée à quartier libre : “ Je suis tout à fait
+        éveillé
+        et en forme pour démarrer cette journée “ nous confie Mounir, puis il ajoute : “ Certains de mes collègues
+        ont le teint
+        blafard, des cernes, si ils suivaient la même morning-routine que moi, ils n’auraient pas tous ces
+        problèmes”.
+        La rédaction a été convaincue par ces bonnes pratiques, nous allons donc nous mettre aux racines et aux
+        graines le matin…
+    </p>
+</details>
+<details>
+    <summary>
+        <img class="articleimg" src="assets/bar.jpg" alt="Image d'illustration d'article">
+        <h3>
+            Sélection de bars by Benoit feat Robin
+        </h3>
+        <i class="fa-solid fa-angle-right"></i>
+        <i class="fa-solid fa-chevron-down"></i>
+    </summary>
 
-        <p>Au détour d’une promenade pour aller humer l’air extérieur, nous avons croisé deux wilders au détour d’une
-            taverne.
-            Rencontre: “Tavernier ! une autre chope on a soif!” A cette phrase, nous comprenons qu’il se joue quelque
-            chose d’important ici.
-            Nous allons à la rencontre des deux compères attablés: “Salut, moi c’est Benoit” “et moi Robin et on a
-            soif!”.
-            Visiblement les deux widers connaissent leur sujet, nous décidons de creuser. Selon Benoit, tout dépend de
-            l’objectif de la soirée
-            “ Tout dépend ce que tu veux : chill, peine de coeur, binge…”.
-            Pour Robin toute occasion est bonne, “peu importe le flacon pourvu qu’il y ait l’ivresse comme disait
-            l’autre”.
-            Nous sommes repartis de cet entretien en titubant.</p>
+    <p>Au détour d’une promenade pour aller humer l’air extérieur, nous avons croisé deux wilders au détour d’une
+        taverne.
+        Rencontre: “Tavernier ! une autre chope on a soif!” A cette phrase, nous comprenons qu’il se joue quelque
+        chose d’important ici.
+        Nous allons à la rencontre des deux compères attablés: “Salut, moi c’est Benoit” “et moi Robin et on a
+        soif!”.
+        Visiblement les deux widers connaissent leur sujet, nous décidons de creuser. Selon Benoit, tout dépend de
+        l’objectif de la soirée
+        “ Tout dépend ce que tu veux : chill, peine de coeur, binge…”.
+        Pour Robin toute occasion est bonne, “peu importe le flacon pourvu qu’il y ait l’ivresse comme disait
+        l’autre”.
+        Nous sommes repartis de cet entretien en titubant.</p>
 
-    </details>
+</details>
 
-    <footer>
+<footer>
 
-        <a href="#"><img src="assets/first day.png"></a>
-        <a href="#"><img src="assets/work.png"></a>
-        <a href="#"><img src="assets/stories.png"></a>
+    <a href="#"><img src="assets/firstday.png" alt="Bouton footer"></a>
+    <a href="#"><img src="assets/work.png" alt="Bouton footer"></a>
+    <a href="#"><img src="assets/stories.png" alt="Bouton footer"></a>
 
-    </footer>
+</footer>
 
 
 </body>
