nouvelles couleurs + optimisation du code

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
     <summary id="trainingDay">
-        <img class="firstdayimg" src="assets/tueur.jpg" alt="Image d'illustration d'article">
+        <img class="firstdayimg" src="assets/model.jpg" alt="Image d'illustration d'article">
         <h2>Training Day: La meilleure façon de se préparer</h2>
         <i class="fa-solid fa-angle-right"></i>
         <i class="fa-solid fa-chevron-down"></i>
