Fixed bug when clicking buttons in navbar, was centered on summary and not on details

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </header>
 
 
-<details>
+<details id="trainingDayDetails">
 
 
 
@@ -59,7 +59,7 @@
     </p>
 
 </details>
-<details>
+<details id="workDetails">
     <summary id="work">
         <img class="articleimg" src="assets/workimg.jpg" alt="Image d'illustration d'article">
         <h3>
@@ -198,7 +198,6 @@
             alt="Bouton footer"></a>
     <a href="#stories" class="boutonFooter" onClick="openDetail(closest)"><img src="assets/stories.png"
             alt="Bouton footer"></a>
-
 </footer>
 
 
