Début de la version desktop, suppression du footer et mise en place d'une navbar en dessous du header, j'ai aussi agrandi le logo et la taille du titre.

--- a/index.html
+++ b/index.html
@@ -22,9 +22,18 @@
     <img id="logo" src="assets/WCS_logo.png" alt="Logo The Wild Post">
     <h1>The Wild Post</h1>
 
-    <button><img id="loupe" src="assets/loupe.png" alt="Bouton de recherche"> </button>
-</header>
+    <button id="boutonLoupe"><img id="loupe" src="assets/loupe.png" alt="Bouton de recherche"> </button>
 
+
+</header>
+<section id=containerHeader>
+    <a href="#trainingDay" class="boutonHeader" onClick="openDetail(closest)"><img src="assets/firstday.png"
+            alt="Bouton header"></a>
+    <a href="#work" class="boutonHeader" onClick="openDetail(closest)"><img src="assets/work.png"
+            alt="Bouton header"></a>
+    <a href="#stories" class="boutonHeader" onClick="openDetail(closest)"><img src="assets/stories.png"
+            alt="Bouton header"></a>
+</section>
 
 <details id="trainingDayDetails">
 
