--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
     <title>The Wild Post</title>
 </head>
 <header>
-    <img id="logo" src="assets/WCS_logo.png" alt="Logo The Wild Post">
+    <a href="#"><img id="logo" src="assets/WCS_logo.png" alt="bouton de retour"> </a>
+    
     <h1>The Wild Post</h1>
 
     <button id="boutonLoupe"><img id="loupe" src="assets/loupe.png" alt="Bouton de recherche"> </button>
 
+
+    
 
 </header>
 <section id=containerHeader>
