presque final version carousel

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <img class="Image" src="assets/model.JPG" />
                 <div class="card-content">
                     <h4>Training Day</h4>
-                    <a href="#" class="button">Read more</a>
+                    <a href="#trainingDay" class="buttoncarousel"><img src="assets/flèche.png"></a>
                 </div>
             </div>
         </li>
@@ -44,7 +44,7 @@
                 <img class="Image" src="assets/workimg.jpg" />
                 <div class="card-content">
                     <h4>Work</h4>
-                    <a href="#" class="button">Read more</a>
+                    <a href="#work" class="buttoncarousel"><img src="assets/flèche.png"></a>
                 </div>
             </div>
         </li>
@@ -54,7 +54,7 @@
                 <img class="Image" src="assets/crane.jpg" />
                 <div class="card-content">
                     <h4>Coiffure Lifestyle</h4>
-                    <a href="#" class="button">Read more</a>
+                    <a href="#stories" class="buttoncarousel"><img src="assets/flèche.png"></a>
                 </div>
             </div>
         </li>
@@ -64,10 +64,10 @@
                 <img class="Image" src="assets/reveil.jpg" />
                 <div class="card-content">
                     <h4>Morning Routine</h4>
-                    <a href="#" class="button">Read more</a>
+                    <a href="#morning" class="buttoncarousel"><img src="assets/flèche.png"></a>
                 </div>
             </div>
-        </li>    
+        </li>       
     </ul>
 </section>
 
@@ -190,7 +190,7 @@
     </p>
 </details>
 
-<details>
+<details id=" morning">
     <summary>
         <img class="articleimg" src="assets/reveil.jpg" alt="Image d'illustration d'article">
         <h3>
