--- a/index.html
+++ b/index.html
@@ -24,58 +24,8 @@
     <h1>The Wild Post</h1>
 
     <button id="boutonLoupe"><img id="loupe" src="assets/loupe.png" alt="Bouton de recherche"> </button>
-</header>
 
 
-
-<section class="carousel">
-    <ul class="carousel-items">
-        <li class="carousel-item">
-            <div class="card">
-                <h2 class="card-title">Training Day: La meilleure façon de se préparer</h2>
-                <img class="Image" src="assets/model.JPG" />
-                <div class="card-content">
-                    <h4>Training Day</h4>
-                    <a href="#trainingDay" class="buttoncarousel"><img src="assets/flèche.png"></a>
-                </div>
-            </div>
-        </li>
-        <li class="carousel-item">
-            <div class="card">
-                <h2 class="card-title">Work: Le starter pack du Wilder</h2>
-                <img class="Image" src="assets/workimg.jpg" />
-                <div class="card-content">
-                    <h4>Work</h4>
-                    <a href="#work" class="buttoncarousel"><img src="assets/flèche.png"></a>
-                </div>
-            </div>
-        </li>
-        <li class="carousel-item">
-            <div class="card">
-                <h2 class="card-title">Coiffure Lifestyle et Esthétique by Jessy</h2>
-                <img class="Image" src="assets/crane.jpg" />
-                <div class="card-content">
-                    <h4>Coiffure Lifestyle</h4>
-                    <a href="#stories" class="buttoncarousel"><img src="assets/flèche.png"></a>
-                </div>
-            </div>
-        </li>
-        <li class="carousel-item">
-            <div class="card">
-                <h2 class="card-title">Morning routine Mounir</h2>
-                <img class="Image" src="assets/reveil.jpg" />
-                <div class="card-content">
-                    <h4>Morning Routine</h4>
-                    <a href="#morning" class="buttoncarousel"><img src="assets/flèche.png"></a>
-                </div>
-            </div>
-        </li>       
-    </ul>
-</section>
-
-
-
-  <section id=containerHeader>
     
 
 </header>
@@ -89,9 +39,8 @@
 </section>
 
 
-  <details id="trainingDayDetails">
-
 <details>
+
 
 
     <summary id="trainingDay">
@@ -216,9 +165,10 @@
         <strong>Sinon des conseils capillaires pour nos lecteurs?</strong><br>
         Il faut aimer le cheveu avant tout. Et beaucoup de travail. Du sang et des larmes comme disait l’autre.
     </p>
+
 </details>
 
-<details id=" morning">
+<details>
     <summary>
         <img class="articleimg" src="assets/reveil.jpg" alt="Image d'illustration d'article">
         <h3>
@@ -338,6 +288,7 @@
 </details>
 
 <footer>
+
     <a href="#trainingDay" class="boutonFooter" onClick="openDetail(closest)"><img src="assets/firstday.png"
             alt="Bouton footer"></a>
     <a href="#work" class="boutonFooter" onClick="openDetail(closest)"><img src="assets/work.png"
